# rk3588_mutil_yolo_serial

./: CMakeLists.txt  camera_demo.cpp  videofile_demo.cpp
include/: camera_RTSP.h  image_process.h  serial_sender.h  threadpool.h
test/: ssss.txt  用户配置 1 - Edge.lnk
utils/: camera.cpp  camera_RTSP.cpp  image_process.cpp  rknn_pool.cpp  serial_sender.cpp
